# dawesome

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.cjs  README.md  index.html  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  turbo.json  vite.config.ts
.github/workflows/: build.yaml  lint.yaml
backend/: Cargo.toml  rustfmt.toml  tauri.conf.json
backend/src/: main.rs  sound.rs  threadpool.rs  timer.rs
docs/: audio-graph.md  audioEngine.md  resources.md
engine/: Cargo.toml  tauri.conf.json
engine/src/: bind_functions.rs  event_dispatch.rs  main.rs  mod.rs
engine/src/app/: mod.rs  ui.rs
engine/src/app/env/: dirs.rs
engine/src/app/workspaces/: mod.rs  playlist.rs
engine/src/daw/: daw.rs  mod.rs
engine/src/daw/daw_core/: audiograph.rs  buffer.rs  drivers.rs  input.rs  mod.rs  sound_buffer.rs  timing.rs  waveform.rs
engine/src/daw/state/: defaults.rs  mod.rs  playlist.rs  state.rs
engine/src/lang/: chunk.rs  function.rs  mod.rs  opcode.rs  operator.rs  parse_rule.rs  parser.rs  precedence.rs  scanner.rs  token.rs  value.rs  vm.rs
engine/src/util/: math.rs  offset.rs
src/: App.spec.tsx  App.tsx  global.scss  index.tsx
src/events/: window.ts
src/hooks/: redux.ts  swr.ts
src/render/: P5Component.ts  P5ComponentBase.ts  RendererBase.ts
src/state/: store.ts
src/types/: documentModel.ts  dragAndDrop.ts  playlist.ts  sampleBrowser.ts  ui.ts
src/util/: debounce.ts  events.ts  helpers.ts
src/views/: TabWindow.tsx  styles.scss
ui/: index.html  package.json
ui/src/: App.tsx
(+99 files in other folders)
