[package]
authors = ["you"]
default-run = "app"
description = "dawesome/engine"
edition = "2021"
license = "MIT"
name = "app"
repository = "https://github.com/nbennett320/dawesome"
rust-version = "1.59"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
chrono = "0.4"
futures = "0.3.21"
rodio = { version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "0.10.0"
tauri = { version = "1.0.0-rc.5", features = ["api-all"] }
num-traits = "0.2.15"
lazy_static = "1.4.0"
hound = "3.5.0"
symphonia = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
pulse = { version = "2.26.*", package= "libpulse-binding" }
psimple = { version="2.25.*", package="libpulse-simple-binding" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
debug = 0
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"

# unsupported optimiaztion for rust versions < 1.59
strip = "debuginfo"

[lib]
proc-macro = true
